hphp/test/zend/bad/tests-lang/catchable_error_001.php.expectf
Catchable fatal error: Argument 1 passed to blah() must be an instance of Foo, instance of stdClass given, called in %scatchable_error_001.php on line 15 and defined in %scatchable_error_001.php on line 5